auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  ports:
  - name: "8189"
    port: 8189
    targetPort: 8189
  - name: "8181"
    port: 8181
    targetPort: 8181
  selector:
    io.kompose.service: auth
status:
  loadBalancer: {}
