coap-adapter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: coap-adapter
  name: coap-adapter
spec:
  ports:
  - name: "5683"
    port: 5683
    protocol: UDP
    targetPort: 5683
  - name: 5683-tcp
    port: 5683
    targetPort: 5683
  selector:
    io.kompose.service: coap-adapter
status:
  loadBalancer: {}
