http-adapter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: http-adapter
  name: http-adapter
spec:
  ports:
  - name: "8185"
    port: 8185
    targetPort: 8185
  selector:
    io.kompose.service: http-adapter
status:
  loadBalancer: {}
