jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger
  name: jaeger
spec:
  ports:
  - name: "6831"
    port: 6831
    protocol: UDP
    targetPort: 6831
  - name: "16686"
    port: 16686
    targetPort: 16686
  - name: "14268"
    port: 14268
    targetPort: 14268
  - name: "5778"
    port: 5778
    targetPort: 5778
  selector:
    io.kompose.service: jaeger
status:
  loadBalancer: {}
