nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  - name: "1883"
    port: 1883
    targetPort: 1883
  - name: "8883"
    port: 8883
    targetPort: 8883
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
