users-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: users
  name: users
spec:
  ports:
  - name: "8180"
    port: 8180
    targetPort: 8180
  selector:
    io.kompose.service: users
status:
  loadBalancer: {}
